scripts/nullaway/wpi/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8.txt
../wpi/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/TransactionExecutor.java:31: error: [NullAway] dereferenced expression reciever is @Nullable
            reciever.deposite(transaction.getMoneyAmount());
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/TransactionExecutor.java:33: error: [NullAway] dereferenced expression sender is @Nullable
            sender.withdraw(transaction.getMoneyAmount());
                  ^
    (see http://t.uber.com/nullaway )
../wpi/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/Broker.java:52: error: [NullAway] dereferenced expression workingAccount is @Nullable
        workingAccount.setState(CheckableAccount.AccountState.CHECKED);
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/core/broker/Broker.java:59: error: [NullAway] dereferenced expression this.accounts.get(accountId) is @Nullable
        return this.accounts.get(accountId).getAccountState();
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/cashier/Cashier.java:132: error: [NullAway] dereferenced expression this.currentAccount is @Nullable
        return this.currentAccount.getAvailableMoney();
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url65a69497a4_sweider_BankSystem_JavaLab8_tgz-pJ8-banksystem_lab4_LauncherJ8/src/banksystem/lab4/cashier/Cashier.java:173: error: [NullAway] dereferenced expression this.currentAccountProxy is @Nullable
                this.currentAccountProxy.releaseCashierInterface();
                                        ^
    (see http://t.uber.com/nullaway )
6 errors
